Table action menu overflow fix

--- a/src/app/core/components/tables/actions-menu/actions-menu.component.scss
+++ b/src/app/core/components/tables/actions-menu/actions-menu.component.scss
@@ -1,7 +1,9 @@
 @import "../../../../variables";
 
 .dropdown {
+  overflow: visible;
   width: 35px;
+  z-index: 99;
   ul {
     left: auto;
     right: 0;
