--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,6 +217,9 @@ mat-tab-group {
     }
   }
 }
+.table-responsive {
+  overflow: visible;
+}
 
 // Modals
 .modal-dialog-box {
